@@ -150,7 +150,11 @@ Win32Frame::Win32Frame (IPlatformFrameCallback* frame, const CRect& size, HWND p
 
 	DWORD style = WS_EX_TRANSPARENT;
 	#if !DEBUG_DRAWING
-	if (getSystemVersion ().dwMajorVersion >= 6) // Vista and above
+	if (getD2DFactory ()) // workaround for Direct2D hotfix (KB2028560)
+	{
+		// when WS_EX_COMPOSITED is set drawing does not work correctly. This seems like a bug in Direct2D wich happens with this hotfix
+	}
+	else if (getSystemVersion ().dwMajorVersion >= 6) // Vista and above
 		style |= WS_EX_COMPOSITED;
 	else
 		backBuffer = createOffscreenContext (size.getWidth (), size.getHeight ());
